--- a/templates/index.html
+++ b/templates/index.html
@@ -63,15 +63,15 @@
                             In your <span class="text-primary">Productivity</span><br> <span class="text-primary">PixelTune</span> on Your side ! <br>
                             <span class="text-primary">Audio? Image?</span>
                         </h1>
-                        <button class="btn btn-primary px-5 py-3 m-5 fs-5 fw-medium" type="button">Start Now</button>
-                    </div>
+                        <button class="btn btn-primary px-5 py-3 m-5 fs-5 fw-medium" type="button" onclick="smoothScroll('#features-section')">Start Now</button>
+                      </div>
                 </div>
             </div>
         </div>        
     </div>
 </header>
 </div>
-<div class="features-section py-5">
+<div id="features-section" class="features-section py-5">
   <div class="container">
     <h2 class="fs-1 fw-bold text-center pt-5 pb-5 text-primary">
       Key Features
