--- a/static/style2.css
+++ b/static/style2.css
@@ -1,6 +1,10 @@
 /*- Font sizes (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
+html{
+  scroll-behavior: smooth;
+  scroll-padding: 10rem;
+}
 
 * {
     --primary-color: #3498db;
